# actidoo-workflow-engine

.devcontainer/: dev-realm.template.json
backend/: pyproject.toml
backend/actidoo_wfe/: database.py  fastapi.py  i18n.py
backend/actidoo_wfe/alembic/versions/: c4e1a7b9d6f2_add_data_model_files.py  d4f7a1e9c2b6_reconcile_fork_to_oss_schema.py
backend/actidoo_wfe/helpers/: bff_table.py
backend/actidoo_wfe/testing/: pytest_plugin.py
backend/actidoo_wfe/tests/: test_data_model_api.py
backend/actidoo_wfe/wf/: cli_i18n.py  config_data_model.py  constants.py  data_model_files.py  exceptions.py  models.py  providers.py  registry_data_model.py  repository.py  service_application.py  service_data_model.py  service_i18n.py  service_task_helper.py  service_user.py  types_data_model.py  views_data_model.py
backend/actidoo_wfe/wf/bff/: bff_user.py  bff_user_data_model.py  bff_user_data_model_schema.py  deps.py
backend/actidoo_wfe/wf/testdata/: __init__.py
backend/actidoo_wfe/wf/testdata/datamodels/: __init__.py  demo_expense_model.py
backend/actidoo_wfe/wf/testdata/processes/FeelWorkflow/: FeelForm.form  __init__.py  diagram_6.bpmn
backend/actidoo_wfe/wf/testdata/processes/FeelWorkflowThisOnly/: FeelFormThis.form  diagram_6.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowBasicStart/: __init__.py  diagram_1.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowBff/: Form1.form  Form2.form  TestFlowBff.bpmn  __init__.py
backend/actidoo_wfe/wf/testdata/processes/TestFlowCurrencyWidget/: CurrencyForm.form  __init__.py  diagram.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowDemoExpenseChange/: EditExpense.form  TestFlowDemoExpenseChange.bpmn  __init__.py
backend/actidoo_wfe/wf/testdata/processes/TestFlowDemoExpenseCreate/: EnterExpense.form  TestFlowDemoExpenseCreate.bpmn  __init__.py
backend/actidoo_wfe/wf/testdata/processes/TestFlowFormUploads/: __init__.py  diagram_7_uploads.bpmn  test_upload.form  test_upload2.form
backend/actidoo_wfe/wf/testdata/processes/TestFlowFormValidation/: SimpleFormID.form  __init__.py  diagram_5.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowInitiatorRoleCheck/: __init__.py  diagram_7.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowLaneMappingMissing/: __init__.py  diagram_4.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowMailNotifications/: SimpleFormID.form  __init__.py  diagram_6.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowMissingForm/: __init__.py  diagram_2.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowNoLaneAssignment/: SimpleFormID.form  __init__.py  diagram_3.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowRoleNotifications/: InitFormID.form  RoleFormID.form  __init__.py  diagram.bpmn
backend/actidoo_wfe/wf/testdata/processes/TestFlowStartWithIncomingMessage/: IncomingRequest.form  ReviewRequest.form  TestFlowStartWithIncomingMessage.bpmn  __init__.py
backend/actidoo_wfe/wf/tests/: test_bff_user_data_model.py  test_bundled_bpmn.py  test_data_model_files.py  test_data_model_registry.py  test_providers.py
(+96 files in other folders)
