[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# wf/testdata holds dev/test-only workflows + demo data models; exclude it from
# the production wheel (it stays importable in editable/dev installs from source).
packages = { find = { include = ["actidoo_wfe", "actidoo_wfe.*"], exclude = ["actidoo_wfe.wf.testdata", "actidoo_wfe.wf.testdata.*"] } }
include-package-data = true

[tool.setuptools.package-data]
actidoo_wfe = [
    "wf/templates/mails/*.mako",
    "alembic/script.py.mako",
]

[project]
name = "actidoo-wfe"
version = "0.1.0"
description = ""
license = { text = "Apache-2.0" }
authors = [
    {name = "Marcel Sander", email = "marcel.sander@actidoo.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "spiffworkflow==3.0.0",
    "fastapi[all]>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "sentry-sdk[fastapi]>=2.48.0",
    "pytz>=2025.2",
    "asgi-correlation-id>=4.3.0",
    "authlib>=1.6.11",
    "sqlalchemy>=2.0.45",
    "venusian>=3.1.0",
    "alembic>=1.17.0",
    "python-dateutil>=2.9.0",
    "typer>=0.21.0",
    "jsonschema[format-nongpl]>=4.25.0",
    "asyncer>=0.0.12",
    "croniter>=6.0.0",
    "fasteners>=0.20",
    "mako>=1.3.12",
    "apache-libcloud>=3.8.0",
    "pymysql>=1.1.2",
    "orjson>=3.11.6",
    "wrapt>=2.0.0",
    "pycountry==24.6.1",
    "sqlalchemy-file==0.6.0",
    "babel==2.17.0"
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.0",
    "autopep8>=2.3.0",
    "ipykernel>=6.30.0",
    "ruff>=0.13.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4.0",
    "import-linter>=2.3.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dummyfiles",
]
extend-select = ["I"]
line-length = 200

[tool.importlinter]
root_package = "actidoo_wfe"

[[tool.importlinter.contracts]]
name = "Domain contract"
type = "independence"
modules = [
    "actidoo_wfe.auth",
    "actidoo_wfe.wf",
]
ignore_imports = [
    "actidoo_wfe.fastapi -> actidoo_wfe.auth.fastapi",
    "actidoo_wfe.fastapi -> actidoo_wfe.wf.fastapi",
    "actidoo_wfe.wf.cross_context.imports -> actidoo_wfe.auth.cross_context.exports",
]

[[tool.importlinter.contracts]]
name = "WFE Layers"
type = "layers"
layers = [
    "actidoo_wfe.wf.bff",
    "actidoo_wfe.wf.service_application",
    "actidoo_wfe.wf.service_workflow : actidoo_wfe.wf.spiff_customized : actidoo_wfe.wf.service_task_helper",
    "actidoo_wfe.wf.service_form",
]
ignore_imports = [
    "actidoo_wfe.wf.service_form -> actidoo_wfe.wf.service_workflow",
]
